--- a/index.html
+++ b/index.html
@@ -1,37 +1,107 @@
-## Welcome to GitHub Pages
+<!DOCTYPE html>
+<html>
+    <title>Canvas</title>
 
-You can use the [editor on GitHub](https://github.com/AlinaBoholidova/AlinaBoholidova.github.io/edit/master/index.md) to maintain and preview the content for your website in Markdown files.
+    <canvas id="canvas" width="600" height="600">
+        <script>
+        var canvas = document.getElementById('canvas');
+        var context = canvas.getContext('2d');
+        var centerX = canvas.width / 2;
+        var centerY = canvas.height / 2;
+        var radius = 210;
+        var eyeRadius = 30;
+        var eyeXOffset = 75;
+        var eyeYOffset = 60;
 
-Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
+        context.fillStyle = "rgba(115, 222, 147, 1)"; 
+        context.fillRect(50, 50, 510, 510);
 
-### Markdown
+        context.beginPath();
+        context.arc(centerX, centerY, radius, 0, 2 * Math.PI, false);
+        context.fillStyle = 'yellow';
+        context.fill();
+        context.lineWidth = 5;
+        context.strokeStyle = 'rgba(255, 218, 0, 1)';
+        context.stroke();
 
-Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
+        var x = centerX + eyeXOffset;
+        var y = centerY - 2 * eyeYOffset;
+        var width = 70;
+        var height = 100;
 
-```markdown
-Syntax highlighted code block
+        context.beginPath();
+        var topCurveHeight = height * 0.3;
+        context.moveTo(x, y + topCurveHeight);
 
-# Header 1
-## Header 2
-### Header 3
+        context.bezierCurveTo(
+            x, y, 
+            x - width / 2, y, 
+            x - width / 2, y + topCurveHeight
+        );
 
-- Bulleted
-- List
+        context.bezierCurveTo(
+            x - width / 2, y + (height + topCurveHeight) / 2, 
+            x, y + (height + topCurveHeight) / 2, 
+            x, y + height
+        );
 
-1. Numbered
-2. List
+        context.bezierCurveTo(
+            x, y + (height + topCurveHeight) / 2, 
+            x + width / 2, y + (height + topCurveHeight) / 2, 
+            x + width / 2, y + topCurveHeight
+        );
 
-**Bold** and _Italic_ and `Code` text
+        context.bezierCurveTo(
+            x + width / 2, y, 
+            x, y, 
+            x, y + topCurveHeight
+        );
 
-[Link](url) and ![Image](src)
-```
+        context.closePath();
+        context.fillStyle = 'red';
+        context.fill();
 
-For more details see [GitHub Flavored Markdown](https://guides.github.com/features/mastering-markdown/).
+        x = centerX - eyeXOffset;
+        context.beginPath();
+        var topCurveHeight = height * 0.3;
+        context.moveTo(x, y + topCurveHeight);
 
-### Jekyll Themes
+        context.bezierCurveTo(
+            x, y, 
+            x - width / 2, y, 
+            x - width / 2, y + topCurveHeight
+        );
 
-Your Pages site will use the layout and styles from the Jekyll theme you have selected in your [repository settings](https://github.com/AlinaBoholidova/AlinaBoholidova.github.io/settings). The name of this theme is saved in the Jekyll `_config.yml` configuration file.
+        context.bezierCurveTo(
+            x - width / 2, y + (height + topCurveHeight) / 2, 
+            x, y + (height + topCurveHeight) / 2, 
+            x, y + height
+        );
 
-### Support or Contact
+        context.bezierCurveTo(
+            x, y + (height + topCurveHeight) / 2, 
+            x + width / 2, y + (height + topCurveHeight) / 2, 
+            x + width / 2, y + topCurveHeight
+        );
 
-Having trouble with Pages? Check out our [documentation](https://help.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.
+        context.bezierCurveTo(
+            x + width / 2, y, 
+            x, y, 
+            x, y + topCurveHeight
+        );
+
+        context.closePath();
+        context.fillStyle = 'red';
+        context.fill();
+
+        context.beginPath();
+        context.arc(centerX, centerY+60, 120, 0, Math.PI, false);
+        context.fillStyle = 'rgba(209, 179, 4, 1)';
+        context.fill();
+        context.strokeStyle = 'rgba(255, 218, 0, 1)';
+        context.lineTo(centerX+122, centerY+60);
+        context.lineWidth = 5;
+        context.stroke();
+        </script>
+        </canvas>
+</html>
