--- a/fanclub/index.html
+++ b/fanclub/index.html
@@ -22,7 +22,7 @@
                 </a>
 
                 <nav class="nav">
-                    <a class="nav__link" href="AlinaBoholidova.github.io/profile/index.html" title="View Profiles">Profile</a>
+                    <a class="nav__link" href="profile" title="View Profiles">Profile</a>
                     <a class="nav__link" href="discography" title="View Releases">Discography</a>
                     <a class="nav__link" href="moa" title="Special for MOA">MOA</a>
                     <a class="nav__link" href="fanclub" title="Join the Fan Club">Fan Club</a>
