--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 </a>
 
                 <nav class="nav__main">
-                    <a class="nav__link__main" href="profile" title="View Profiles">Profile</a>
-                    <a class="nav__link__main" href="discography" title="View Releases">Discography</a>
-                    <a class="nav__link__main" href="moa" title="Special for MOA">MOA</a>
-                    <a class="nav__link__main" href="fanclub" title="Join the Fan Club">Fan Club</a>
+                    <a class="nav__link__main" href="../profile" title="View Profiles">Profile</a>
+                    <a class="nav__link__main" href="../discography" title="View Releases">Discography</a>
+                    <a class="nav__link__main" href="../moa" title="Special for MOA">MOA</a>
+                    <a class="nav__link__main" href="../fanclub" title="Join the Fan Club">Fan Club</a>
                 </nav>
 
             </div>
