--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <div class="container">
             <div class="header__inner__main">
 
-                <a href="index.html" title="Go to TOMORROW X TOGETHER Home Page"> 
+                <a href="../index.html" title="Go to TOMORROW X TOGETHER Home Page"> 
                     <img class="responsiveImg" src="logo.png" alt="">
                 </a>
 
                 <nav class="nav__main">
-                    <a class="nav__link__main" href="../profile" title="View Profiles">Profile</a>
-                    <a class="nav__link__main" href="../discography" title="View Releases">Discography</a>
-                    <a class="nav__link__main" href="../moa" title="Special for MOA">MOA</a>
-                    <a class="nav__link__main" href="../fanclub" title="Join the Fan Club">Fan Club</a>
+                    <a class="nav__link__main" href="profile" title="View Profiles">Profile</a>
+                    <a class="nav__link__main" href="discography" title="View Releases">Discography</a>
+                    <a class="nav__link__main" href="moa" title="Special for MOA">MOA</a>
+                    <a class="nav__link__main" href="fanclub" title="Join the Fan Club">Fan Club</a>
                 </nav>
 
             </div>
