--- a/profile/index.html
+++ b/profile/index.html
@@ -18,15 +18,15 @@
         <div class="container">
             <div class="header__inner">
 
-                <a href="index.html" title="Go to TOMORROW X TOGETHER Home Page"> 
+                <a href="../index.html" title="Go to TOMORROW X TOGETHER Home Page"> 
                     <img class="responsiveImg" src="assets/images/logo.png" alt=""> 
                 </a>
 
                 <nav class="nav">
-                    <a class="nav__link" href="profile" title="View Profiles">Profile</a>
-                    <a class="nav__link" href="discography" title="View Releases">Discography</a>
-                    <a class="nav__link" href="moa" title="Special for MOA">MOA</a>
-                    <a class="nav__link" href="fanclub" title="Join the Fan Club">Fan Club</a>
+                    <a class="nav__link" href="../profile" title="View Profiles">Profile</a>
+                    <a class="nav__link" href="../discography" title="View Releases">Discography</a>
+                    <a class="nav__link" href="../moa" title="Special for MOA">MOA</a>
+                    <a class="nav__link" href="../fanclub" title="Join the Fan Club">Fan Club</a>
                 </nav>
 
             </div>
