--- a/fanclub/index.html
+++ b/fanclub/index.html
@@ -47,7 +47,7 @@
                 <h1 class="fanclub__title">TXT Global Official Fan Club MOA Membership</h1>
             </div>
 
-			<form name="apply" action="result.html" onsubmit="Check()" class="reg__form">
+			<form name="apply" action="../result" onsubmit="Check()" class="reg__form">
                 <h2 class="fanclub__suptitle">Registration</h2>
                 <p class="fanclub__suptitle">Please fill in this form to apply for membership.</p>
 				<fieldset class="reg__inner">
