--- a/discography/index.html
+++ b/discography/index.html
@@ -40,14 +40,14 @@
             <h1 class="albums__title">DISCOGRAPHY</h1>
             <ul>
                 <li>
-                    <a href="the-dream-chapter-magic" title="The Dream Chapter : Magic">
+                    <a href="../the-dream-chapter-magic" title="The Dream Chapter : Magic">
                         <div class="albums__obj">
                             <img src="magic-album-cover.jpg" alt="The Dream Chapter : Magic">
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="the-dream-chapter-star" title="The Dream Chapter : Star">
+                    <a href="../the-dream-chapter-star" title="The Dream Chapter : Star">
                         <div class="albums__obj">
                             <img src="star-album-cover.jpg" alt="The Dream Chapter : Star">
                         </div>
