--- a/result/index.html
+++ b/result/index.html
@@ -47,7 +47,7 @@
                 <h1 class="fanclub__title">TXT Global Official Fanclub MOA Membership</h1>
             </div>
 
-			<form action="fanclub.html" class="reg__form">
+			<form action="../fanclub" class="reg__form">
                 <h2 class="fanclub__suptitle">You have been successfully verified for TXT GLOBAL OFFICIAL FANCLUB MOA MEMBERSHIP!</h2>
 				<p id="result"></p>
 				<fieldset class="reg__inner">
