--- a/profile/index.html
+++ b/profile/index.html
@@ -19,7 +19,7 @@
             <div class="header__inner">
 
                 <a href="../index.html" title="Go to TOMORROW X TOGETHER Home Page"> 
-                    <img class="responsiveImg" src="logo.png" alt=""> 
+                    <img class="responsiveImg" src="../logo.png" alt=""> 
                 </a>
 
                 <nav class="nav">
